# ld-frontend-hw

./: README.md  pyproject.toml
HW1/: main.py
HW3/: client.py  schema.graphql  server.py
