[project]
name = "lightdance-frontend-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "websockets>=11.0",
    "flask>=3.1.0",
    "graphene>=2.1.9",
    "gql[all]>=3.5.0",
    "graphql-server[flask]>=3.0.0b7",
]
